04/22/2004  version 0.1.68  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a build problem that was introduced into cvs.
    * Fixed bug where jsxe generated NumberFormatExceptions if user defined
      saved properties were incorrectly formatted.

04/21/2004  version 0.1.67  Ian Lewis <IanLewis@member.fsf.org>

    * Made it so that element nodes can't be edited in the JTree unless
      you select 'Rename Node' from the context menu. This is done because of
      some problems with compatiblity between the editing and drag and drop.
    * The DefaultView now uses the default options set in the
      documentview.default.props file. Any properties used by this class should
      have default values set in this properties file.

04/20/2004  version 0.1.66  Ian Lewis <IanLewis@member.fsf.org>

    * Made split panes in the default tree view one touch expandable.
    * Made it so if opening a file and the only document open is untitled
      and clean then jsXe closes it.

04/18/2004  version 0.1.65  Ian Lewis <IanLewis@member.fsf.org>

    * Cleaned up some code in the TabbedView class. Removed the public update()
      method.
    * Changed some actions in the DefaultViewTree extend AbstractAction since
      they will probobly have key mnemonics in the future.
    * Added key mnemonics to the menu bar items so that you can navigate them
      easier using the keyboard.

04/17/2004  version 0.1.64  Ian Lewis <IanLewis@member.fsf.org>

    * Added logic to the tree in the Default view so that dragged and dropped
      nodes are always visible after a drop. New nodes that are added
      through the context menu are also visible after they are added.
    * Fixed support for cdata-sections in the DOMSerializer

04/16/2004  version 0.1.63  Ian Lewis <IanLewis@member.fsf.org>

    * Added logic to highlight a node when the user is going to drop onto a
      particular node.

04/04/2004  version 0.1.62  Ian Lewis <IanLewis@member.fsf.org>
